--- a/src/components/HomeSwiper/homeSwiper.css
+++ b/src/components/HomeSwiper/homeSwiper.css
@@ -1,5 +1,4 @@
 .homeSwiper {
-  /* height: 380px; */
   font-family: var(--montserrat);
   font-weight: 400;
   margin-left: -20px;
@@ -21,7 +20,6 @@
 }
 
 .homeSwiper .wrapp {
-  /* width: 280px; */
   width: 100%;
   aspect-ratio: 280 /337;
   max-height: 432px;
@@ -37,7 +35,6 @@
 
   @media screen and (min-width: 768px) {
     aspect-ratio: 1280 / 537;
-    /* aspect-ratio: 2/1; */
     max-height: none;
     flex-direction: row-reverse;
     gap: 40px;
@@ -134,7 +131,6 @@
   border-radius: 24px;
 
   @media screen and (min-width: 768px) {
-    /* height: 100%; */
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     flex: 1;
   }
@@ -168,5 +164,15 @@
 
   @media screen and (min-width: 768px) {
     right: 32px;
+  }
+}
+
+#loader {
+  width: 100%;
+  aspect-ratio: 280 /337;
+  max-height: 432px;
+
+  @media screen and (min-width: 768px) {
+    aspect-ratio: 1280 / 537;
   }
 }
