--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -1,12 +1,13 @@
 @import "../../app/variables";
 
 .container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .text {
-    font-size: 50px;
-    font-weight: 700;
-    color: $accentColor;
+  font-size: 50px;
+  font-weight: 700;
+  color: $accentColor;
 }
