--- a/src/sections/homeProjectsSection/HomeProjectsSection.module.scss
+++ b/src/sections/homeProjectsSection/HomeProjectsSection.module.scss
@@ -1,40 +1,10 @@
 @import "../../app/variables";
 
-.selectWrapp {
-  display: flex;
-  position: relative;
-  width: fit-content;
-  width: 280px;
-  height: 20px;
-}
+#accordion {
+  margin-top: 24px;
+  margin-bottom: -16px;
 
-.select {
-  font-size: 16px;
-  padding-left: 2px;
-  width: 100%;
-  height: 100%;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: transparent;
-  background-image: url("/images/BtnArrow.svg");
-  background-repeat: no-repeat;
-  & option {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 100%;
-    background-color: transparent;
+  @media screen and (min-width: $tablet) {
+    display: none;
   }
-}
-
-.arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%) rotate(360deg);
-  transform: translateY(-50%) rotate(270deg);
-  right: 4px;
-  width: 12px;
-  height: 12px;
-}
-.arrActive {
-  transform: translateY(-50%) rotate(360deg);
 }
