--- a/src/components/Forms/FormStyles.module.scss
+++ b/src/components/Forms/FormStyles.module.scss
@@ -110,11 +110,7 @@
 .socSvg {
     width: 24px;
     height: 24px;
-
-    //   @media screen and (min-width: 1440px) {
-    //     width: 32px;
-    //     height: 32px;
-    //   }
+    cursor: pointer;
 }
 
 .boxChecked,
