--- a/src/components/LangSwitcher/LangSwitcher.module.scss
+++ b/src/components/LangSwitcher/LangSwitcher.module.scss
@@ -4,6 +4,9 @@
   position: relative;
   z-index: 200;
   cursor: pointer;
+  font-family: var(--montserrat);
+  font-weight: 600;
+  font-size: 12px;
 
   &:focus,
   &:hover {
@@ -12,6 +15,9 @@
     & .currentLang {
       box-shadow: inset 0px 0px 12px 0px rgba(59, 111, 125, 0.3);
     }
+  }
+  @media screen and (min-width: $tablet) {
+    font-size: 16px;
   }
 }
 
