--- a/src/components/ProjectAccordio/ProjectAccordio.module.scss
+++ b/src/components/ProjectAccordio/ProjectAccordio.module.scss
@@ -12,7 +12,6 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-bottom: 24px;
   @media screen and (min-width: $tablet) {
     margin-bottom: 32px;
   }
@@ -100,8 +99,17 @@
 }
 
 .accordionClose {
-  height: 0;
   opacity: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 .accordionBtnItem {
