--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -1,6 +1,14 @@
 @import '../../app/variables';
 
 .projectsItem {
+  border-radius: 32px;
+  box-shadow: 2px 2px 4px 0 rgba(75, 75, 78, 0.5);
+  @media screen and (min-width: $tablet) {
+    border-radius: 50px;
+  }
+}
+
+.projectsLink {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8,14 +16,16 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 20px 20px;
-  border-radius: 50px;
-  box-shadow: 2px 2px 4px 0 rgba(75, 75, 78, 0.5);
-  text-align: center;
+  width: 100%;
+  height: 100%;
+
+  padding: 16px;
   @media screen and (min-width: $tablet) {
+    flex-direction: column-reverse;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center;
     padding: 37px 24px;
   }
   @media screen and (min-width: $laptop) {
@@ -26,8 +36,8 @@
 .imgContainer {
   position: relative;
   overflow: hidden;
-  width: 248px;
-  height: 231px;
+  width: 100%;
+  height: 70vw;
   border-radius: 32px;
   margin-bottom: 16px;
   box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.7);
@@ -46,6 +56,7 @@
 }
 
 .contentProject {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -53,50 +64,90 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  row-gap: 16px;
+  align-items: flex-start;
+  row-gap: 9px;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: -6%;
+    height: 1px;
+    width: 111%;
+    background-color: #eeeeee;
+  }
+  @media screen and (min-width: $tablet) {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    row-gap: 16px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
 }
 
 .projectTitle {
   font-family: var(--montserrat);
-  font-weight: 400;
-  font-size: 20px;
-  text-align: center;
-  color: $textColor;
+  font-weight: 500;
+  font-size: 16px;
+  color: #565656;
+
+  @media screen and (min-width: $tablet) {
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    color: $textColor;
+  }
+}
+
+.date {
+  font-family: var(--montserrat);
+  font-weight: 300;
+  font-size: 11px;
+  color: #565656;
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
 }
 
 .projectDesc {
-  font-family: var(--montserrat);
-  font-weight: 500;
-  font-size: 16px;
-  color: $textColor;
+  display: none;
+  @media screen and (min-width: $tablet) {
+    font-family: var(--montserrat);
+    font-weight: 500;
+    font-size: 16px;
+    color: $textColor;
+  }
 }
 
 .btn {
-  width: 184px;
-  height: 52px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  border-radius: 54px;
-  font-family: var(--montserrat);
-  font-weight: 400;
-  font-size: 16px;
-  border: none;
-  color: $white;
-  background-color: $accentColor;
-  outline: none;
-  cursor: pointer;
-  &:hover,
-  &:focus {
-    background-color: #ff5c00;
+  display: none;
+  @media screen and (min-width: $tablet) {
+    width: 184px;
+    height: 52px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    border-radius: 54px;
+    font-family: var(--montserrat);
+    font-weight: 400;
+    font-size: 16px;
+    border: none;
+    color: $white;
+    background-color: $accentColor;
+    outline: none;
+    cursor: pointer;
+    &:hover,
+    &:focus {
+      background-color: #ff5c00;
+    }
   }
 }
