--- a/src/sections/partnershipSection/PartnershipSection.module.scss
+++ b/src/sections/partnershipSection/PartnershipSection.module.scss
@@ -1,8 +1,5 @@
 @import '../../app/variables';
 
-.partnership {
-}
-
 .title {
   margin-bottom: 24px;
   @media screen and (min-width: $tablet) {
@@ -21,17 +18,20 @@
   -ms-flex-pack: center;
   justify-content: center;
   grid-template-columns: repeat(1, 1fr);
+
+  gap: 20px;
   @media screen and (min-width: $tablet) {
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
   }
   @media screen and (min-width: $laptop) {
+    justify-content: space-between;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-bottom: 32px;
   }
   @media screen and (min-width: $desktop) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 305px);
     gap: 20px;
     margin-bottom: 40px;
   }
@@ -51,8 +51,9 @@
   height: 100%;
   border-radius: 54px;
   box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
-  padding: 56px;
+  padding: 35px 28px;
   row-gap: 32px;
+  box-sizing: border-box;
   @media screen and (min-width: $tablet) {
     padding: 56px;
     row-gap: 40px;
@@ -97,15 +98,52 @@
   }
 }
 
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  column-gap: 16px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  border: 1px solid $textColor;
+  border-radius: 54px;
+  padding: 16px 0px;
+  width: 224px;
+  height: 52px;
+  font-family: var(--montserrat);
+  font-weight: 500;
+  font-size: 16px;
+  color: $textColor;
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
+
+.arrow {
+  width: 16px;
+  height: 16px;
+  fill: $textColor;
+}
+
 .partnershipSmallList {
   display: none;
   @media screen and (min-width: $laptop) {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
+    display: -ms-grid;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: repeat(4, 197px);
     column-gap: 20px;
     row-gap: 40px;
+  }
+  @media screen and (min-width: $desktop) {
+    grid-template-columns: repeat(6, 197px);
   }
 }
 
@@ -140,7 +178,7 @@
 .partnershipSmallTitle {
   font-family: var(--montserrat);
   font-weight: 400;
-  font-size: 32px;
+  font-size: 24px;
   text-align: center;
   color: $textColor;
 }
