--- a/src/sections/partnershipSection/PartnershipSection.module.scss
+++ b/src/sections/partnershipSection/PartnershipSection.module.scss
@@ -1,184 +1,201 @@
-@import '../../app/variables';
+@import "../../app/variables";
 
 .title {
-  margin-bottom: 24px;
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 32px;
-  }
+    margin-bottom: 24px;
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 32px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 40px;
-  }
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 40px;
+    }
 }
 
 .partnershipList {
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  grid-template-columns: repeat(1, 1fr);
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
 
-  gap: 20px;
-  @media screen and (min-width: $tablet) {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
-  }
-  @media screen and (min-width: $laptop) {
-    justify-content: space-between;
-    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    margin-bottom: 32px;
-  }
-  @media screen and (min-width: $desktop) {
-    grid-template-columns: repeat(4, 305px);
-    gap: 20px;
-    margin-bottom: 40px;
-  }
+    @media screen and (min-width: $tablet) {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 24px;
+    }
+    @media screen and (min-width: $laptop) {
+        justify-content: space-between;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-bottom: 32px;
+    }
+    @media screen and (min-width: $desktop) {
+        grid-template-columns: repeat(4, 305px);
+        gap: 20px;
+        margin-bottom: 40px;
+    }
 }
 
 .partnershipItem {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 100%;
-  border-radius: 54px;
-  box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
-  padding: 35px 28px;
-  row-gap: 32px;
-  box-sizing: border-box;
-  @media screen and (min-width: $tablet) {
-    padding: 56px;
-    row-gap: 40px;
-  }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 100%;
+    border-radius: 54px;
+    box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
+    padding: 35px 28px;
+    row-gap: 32px;
+    box-sizing: border-box;
+    @media screen and (min-width: $tablet) {
+        padding: 56px;
+        row-gap: 40px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    padding: 45px;
-  }
+    @media screen and (min-width: $desktop) {
+        padding: 45px;
+    }
 }
 
 .imgContainer {
-  position: relative;
-  width: 55%;
-  height: 30vw;
-  & img {
-    object-fit: contain;
-  }
-  @media screen and (min-width: $tablet) {
-    width: 128px;
-    height: 125px;
-  }
+    position: relative;
+    width: 55%;
+    height: 30vw;
+    & img {
+        object-fit: contain;
+    }
+    @media screen and (min-width: $tablet) {
+        width: 128px;
+        height: 125px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    width: 100px;
-    height: 100px;
-  }
+    @media screen and (min-width: $desktop) {
+        width: 100px;
+        height: 100px;
+    }
 }
 
 .partnershipTitle {
-  font-family: var(--montserrat);
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-  color: $textColor;
-  @media screen and (min-width: $tablet) {
-    font-weight: 400;
-    font-size: 32px;
-  }
+    font-family: var(--montserrat);
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    color: $textColor;
+    @media screen and (min-width: $tablet) {
+        font-weight: 400;
+        font-size: 32px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    font-size: 40px;
-  }
+    @media screen and (min-width: $desktop) {
+        font-size: 40px;
+    }
 }
 
 .btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  column-gap: 16px;
-  cursor: pointer;
-  border: none;
-  background-color: transparent;
-  border: 1px solid $textColor;
-  border-radius: 54px;
-  padding: 16px 0px;
-  width: 224px;
-  height: 52px;
-  font-family: var(--montserrat);
-  font-weight: 500;
-  font-size: 16px;
-  color: $textColor;
-  @media screen and (min-width: $tablet) {
-    display: none;
-  }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    column-gap: 16px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    border: 1px solid $textColor;
+    border-radius: 54px;
+    padding: 16px 0px;
+    width: 224px;
+    height: 52px;
+    font-family: var(--montserrat);
+    font-weight: 500;
+    font-size: 16px;
+    color: $textColor;
+    @media screen and (min-width: $tablet) {
+        display: none;
+    }
 }
 
 .arrow {
-  width: 16px;
-  height: 16px;
-  fill: $textColor;
+    width: 16px;
+    height: 16px;
+    fill: $textColor;
 }
 
 .partnershipSmallList {
-  display: none;
-  @media screen and (min-width: $laptop) {
-    display: -ms-grid;
-    display: grid;
-    justify-content: space-between;
-    grid-template-columns: repeat(4, 197px);
-    column-gap: 20px;
-    row-gap: 40px;
-  }
-  @media screen and (min-width: $desktop) {
-    grid-template-columns: repeat(6, 197px);
-  }
+    display: none;
+    @media screen and (min-width: $laptop) {
+        display: -ms-grid;
+        display: grid;
+        justify-content: space-between;
+        grid-template-columns: repeat(4, 197px);
+        column-gap: 20px;
+        row-gap: 40px;
+    }
+    @media screen and (min-width: $desktop) {
+        grid-template-columns: repeat(6, 197px);
+    }
 }
 
 .partnershipSmallItem {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 30px 32px;
-  height: 100%;
-  border-radius: 54px;
-  box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 30px 32px;
+    height: 100%;
+    border-radius: 54px;
+    box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
 }
 
 .imgSmallContainer {
-  position: relative;
-  width: 75px;
-  height: 75px;
-  margin-bottom: 32px;
+    position: relative;
+    width: 75px;
+    height: 75px;
+    margin-bottom: 32px;
 
-  & img {
-    object-fit: contain;
-  }
+    & img {
+        object-fit: contain;
+    }
 }
 
 .partnershipSmallTitle {
-  font-family: var(--montserrat);
-  font-weight: 400;
-  font-size: 24px;
-  text-align: center;
-  color: $textColor;
+    font-family: var(--montserrat);
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+    color: $textColor;
+}
+
+.formBox {
+    margin-right: auto;
+    margin-left: auto;
+    width: fit-content;
+    margin-top: 32px;
+    @media screen and (min-width: $desktop) {
+        margin-top: 40px;
+    }
+}
+
+.title {
+    margin-bottom: 32px;
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 40px;
+    }
 }
