--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -115,6 +115,7 @@
 .projectDesc {
   display: none;
   @media screen and (min-width: $tablet) {
+    display: block;
     font-family: var(--montserrat);
     font-weight: 500;
     font-size: 16px;
