--- a/src/components/NavigationHeader/NavigationHeader.module.scss
+++ b/src/components/NavigationHeader/NavigationHeader.module.scss
@@ -138,11 +138,36 @@
   width: max-content;
   z-index: 10;
   cursor: pointer;
+  position: relative;
+  &::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background-color: $hoverBtnColor;
+    position: absolute;
+    bottom: -8px;
+  }
+
+  &:hover,
+  &:focus {
+    color: $hoverBtnColor;
+    &::after {
+      width: 100%;
+    }
+  }
   font-weight: 600;
   @media screen and (min-width: $desktop) {
     font-weight: 400;
   }
 }
+
+.activeTitle {
+  color: $hoverBtnColor;
+  &::after {
+    width: 100%;
+  }
+}
+
 .arrow {
   width: 12px;
   height: 12px;
@@ -188,6 +213,11 @@
 }
 
 .navLink {
+  &:hover,
+  &:focus {
+    color: $hoverBtnColor;
+    font-weight: 500;
+  }
   @media screen and (min-width: $desktop) {
     padding: 16px 24px;
     border-bottom: 1px solid $textColor;
