--- a/src/sections/contactsSection/ContactSection.module.scss
+++ b/src/sections/contactsSection/ContactSection.module.scss
@@ -1,52 +1,53 @@
 @import "@/app/variables";
 
 .contactWrap {
-    width: fit-content;
-    margin-right: auto;
-    margin-left: auto;
+  width: fit-content;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .contactTitle {
-    margin-bottom: 23px;
-    @media screen and (min-width: $tablet) {
-        margin-bottom: 32px;
-    }
+  margin-bottom: 23px;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 32px;
+  }
 }
 
 .formBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    @media screen and (min-width: $desktop) {
-        flex-direction: row;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+  }
 }
 
 .imgWrapper {
-    margin-top: 40px;
+  margin-top: 40px;
 
-    @media screen and (min-width: $desktop) {
-        margin-top: 0;
-        margin-left: 78px;
-    }
+  @media screen and (min-width: $desktop) {
+    margin-top: 0;
+    margin-left: 78px;
+  }
 }
 
 .contactList {
-    width: 280px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 40px;
-    margin-bottom: 24px;
-    @media screen and (min-width: $tablet) {
-        width: 571px;
-        margin-right: auto;
-        margin-left: auto;
-    }
+  width: 280px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+  margin-bottom: 24px;
+  @media screen and (min-width: $tablet) {
+    width: 571px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .contactItem {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 // .contactItem :not(:last-child) {
@@ -54,75 +55,75 @@
 // }
 
 .contactText {
-    width: 240px;
-    margin-left: 16px;
-    font-family: var(--montserrat);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.2;
-    overflow-wrap: break-word;
+  width: 240px;
+  margin-left: 16px;
+  font-family: var(--montserrat);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  overflow-wrap: break-word;
 
-    @media screen and (min-width: $tablet) {
-        width: 500px;
-        margin-left: 32px;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 1.2;
-    }
-}
-
-.contactSvg {
-    width: 24px;
-    height: 24px;
-    @media screen and (min-width: $tablet) {
-        width: 32px;
-        height: 32px;
-    }
-}
-
-.contactBox {
-    display: flex;
-    flex-direction: column;
-    @media screen and (min-width: $desktop) {
-        flex-direction: row;
-        align-items: center;
-    }
-}
-
-.iframe {
-    width: 280px;
-    height: 213px;
-    border: 0;
-    margin-bottom: 24px;
-    @media screen and (min-width: $tablet) {
-        width: 704px;
-        height: 528px;
-        margin-bottom: 54px;
-    }
-    @media screen and (min-width: $desktop) {
-        width: 649px;
-        height: 487px;
-        margin-bottom: 0;
-        margin-right: 56px;
-    }
-}
-
-.descriptionBox {
-    margin-top: 48px;
-    margin-bottom: 40px;
-}
-
-.description {
-    font-family: var(--montserrat);
+  @media screen and (min-width: $tablet) {
+    width: 500px;
+    margin-left: 32px;
     font-size: 24px;
     font-weight: 400;
     line-height: 1.2;
+  }
+}
+
+.contactSvg {
+  width: 24px;
+  height: 24px;
+  @media screen and (min-width: $tablet) {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+.contactBox {
+  display: flex;
+  flex-direction: column;
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+.iframe {
+  width: 280px;
+  height: 213px;
+  border: 0;
+  margin-bottom: 24px;
+  @media screen and (min-width: $tablet) {
+    width: 704px;
+    height: 528px;
+    margin-bottom: 54px;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 649px;
+    height: 487px;
+    margin-bottom: 0;
+    margin-right: 56px;
+  }
+}
+
+.descriptionBox {
+  margin-top: 48px;
+  margin-bottom: 40px;
+}
+
+.description {
+  font-family: var(--montserrat);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.2;
 }
 
 .description:not(:last-child) {
-    margin-bottom: 14px;
+  margin-bottom: 14px;
 }
 
 .descriptionLink {
-    color: $accentColor;
+  color: $accentColor;
 }
