--- a/src/sections/dashboard/DashboardSections.module.scss
+++ b/src/sections/dashboard/DashboardSections.module.scss
@@ -3,11 +3,15 @@
 .container {
     width: 100%;
     display: flex;
-    gap: 20px;
+    flex-direction: column-reverse;
+    gap: 40px;
+}
+
+.editPage {
+    flex-direction: column;
 }
 
 .cardsList {
-    flex: 1;
     display: flex;
     flex-direction: column;
     row-gap: 40px;
@@ -15,7 +19,7 @@
 
 .userCardsList {
     width: fit-content;
-    margin:0 auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     row-gap: 40px;
