add translation data

--- a/src/sections/heroSection/heroSection.module.scss
+++ b/src/sections/heroSection/heroSection.module.scss
@@ -264,3 +264,12 @@
     right: 0px;
   }
 }
+
+.socialLinks {
+  &:hover,
+  &:focus {
+    border: 1px solid transparent;
+    background-color: $accentColor;
+    scale: 1.1;
+  }
+}
