--- a/src/components/dashboard/DashboardComponents.module.scss
+++ b/src/components/dashboard/DashboardComponents.module.scss
@@ -165,7 +165,7 @@
 
 //AUTH FORMS
 .authForm {
-    width: 782px;
+    max-width: 782px;
     margin: 0 auto;
     padding: 120px 148px;
     align-items: center;
