--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -107,13 +107,12 @@
 
   @media screen and (min-width: $tablet) {
     height: 60px;
-    margin-bottom: 12px;
     margin-top: -12px;
   }
 
   @media screen and (min-width: $desktop) {
     height: 80px;
-    margin-bottom: 28px;
+    // margin-bottom: 28px;
   }
 }
 
@@ -144,7 +143,9 @@
 
 .street {
   @media screen and (min-width: $desktop) {
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
+    margin-bottom: 12px;
+
     font-size: 20px;
   }
 }
@@ -235,5 +236,23 @@
 
   @media screen and (min-width: $desktop) {
     margin-top: 54px;
+  }
+}
+.paymentLogoWrapp {
+  display: flex;
+  gap: 16px;
+  margin-top: 32px;
+}
+
+.paymentLogo {
+  position: relative;
+  width: 48px;
+  height: 28px;
+  overflow: hidden;
+  filter: brightness(3);
+  opacity: 0.5;
+
+  & img {
+    object-fit: cover;
   }
 }
