--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -68,6 +68,7 @@
     & svg {
       width: 16px;
       height: 16px;
+      display: none;
     }
   }
 
@@ -78,6 +79,7 @@
     justify-content: space-between;
 
     & svg {
+      display: inline-block;
       width: 28px;
       height: 28px;
     }
