--- a/src/sections/donateSection/DonateSection.module.scss
+++ b/src/sections/donateSection/DonateSection.module.scss
@@ -62,4 +62,18 @@
 
 #link {
   width: 100%;
+
+  & svg {
+    display: none;
+    width: 16px;
+    height: 16px;
+    @media screen and (min-width: 400px) {
+      display: block;
+      fill: $white;
+    }
+    @media screen and (min-width: $laptop) {
+      width: 24px;
+      height: 22px;
+    }
+  }
 }
