--- a/src/sections/projectIdSection/ProjectIdSection.module.scss
+++ b/src/sections/projectIdSection/ProjectIdSection.module.scss
@@ -24,8 +24,10 @@
     text-align: start;
     width: max-content;
     font-size: 24px;
-    margin-bottom: 40px;
-    padding-bottom: 18px;
+    margin-bottom: 16px;
+    // margin-bottom: 40px;
+    padding-bottom: 8px;
+    // padding-bottom: 18px;
   }
 }
 
@@ -59,12 +61,14 @@
   }
   @media screen and (min-width: $tablet) {
     width: 40vw;
-    height: 40vw;
+    height: 30vw;
     margin-bottom: 0;
   }
   @media screen and (min-width: $desktop) {
     width: 516px;
-    height: 531px;
+    height: 390px;
+    // width: 516px;
+    // height: 531px;
   }
 }
 
