fix partnership, projectId and arrow homeAboutSection

--- a/src/sections/homeAboutFundSection/HomeAboutFundSection.module.scss
+++ b/src/sections/homeAboutFundSection/HomeAboutFundSection.module.scss
@@ -92,6 +92,7 @@
   background-color: $bodyColor;
   color: $textColor;
   & svg {
+    display: block;
     width: 16px;
     height: 16px;
     fill: $textColor;
