--- a/src/sections/projectIdSection/ProjectIdSection.module.scss
+++ b/src/sections/projectIdSection/ProjectIdSection.module.scss
@@ -110,6 +110,35 @@
   }
 }
 
+.purposeCollectionEn {
+  font-size: 16px;
+  @media screen and (min-width: $mobile) {
+    font-size: 18px;
+  }
+  @media screen and (min-width: $tablet) {
+    font-size: 24px;
+  }
+  @media screen and (min-width: $laptop) {
+    font-size: 32px;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 42px;
+  }
+}
+
+.purposeCollectionUa {
+  font-size: 24px;
+  @media screen and (min-width: $tablet) {
+    font-size: 36px;
+  }
+  @media screen and (min-width: $laptop) {
+    font-size: 42px;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 48px;
+  }
+}
+
 .purposeCollection {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -119,20 +148,14 @@
   align-items: center;
   font-family: var(--montserrat);
   font-weight: 600;
-  font-size: 24px;
   color: $textColor;
   @media screen and (min-width: $tablet) {
     flex-direction: row-reverse;
     font-weight: 700;
-    font-size: 36px;
-  }
-  @media screen and (min-width: $laptop) {
-    font-size: 42px;
   }
 
   @media screen and (min-width: $desktop) {
     font-weight: 600;
-    font-size: 48px;
   }
 }
 
