--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -18,7 +18,7 @@
 
   & a:hover {
     color: $hoverBtnColor;
-    text-shadow: 0px 0px 2px rgba(255, 94, 0, 0.5);
+    -webkit-text-stroke: 0.5px $hoverBtnColor;
   }
 
   & h3 {
