--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -1,4 +1,4 @@
-@import '../../app/variables';
+@import "../../app/variables";
 
 .projectsItem {
   border-radius: 32px;
@@ -69,16 +69,16 @@
   row-gap: 9px;
   padding-bottom: 16px;
   margin-bottom: 16px;
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: -6%;
-    height: 1px;
-    width: 111%;
-    background-color: #eeeeee;
-  }
+  // &::after {
+  //   content: "";
+  //   display: block;
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: -6%;
+  //   height: 1px;
+  //   width: 111%;
+  //   background-color: #eeeeee;
+  // }
   @media screen and (min-width: $tablet) {
     -webkit-box-align: center;
     -ms-flex-align: center;
