--- a/src/sections/projectIdSection/ProjectIdSection.module.scss
+++ b/src/sections/projectIdSection/ProjectIdSection.module.scss
@@ -1,4 +1,4 @@
-@import '../../app/variables';
+@import "../../app/variables";
 
 .title {
   margin-bottom: 24px;
@@ -182,6 +182,8 @@
   @media screen and (min-width: $tablet) {
     // margin-top: auto;
     margin: auto 0;
+    margin-top: auto;
+    margin-bottom: 0;
   }
 }
 
