--- a/src/components/Buttons/ButtonLink/ButtonLink.module.scss
+++ b/src/components/Buttons/ButtonLink/ButtonLink.module.scss
@@ -1,65 +1,65 @@
 @import "../../../app/variables";
 
 .btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  width: 136px;
-  height: 38px;
-  padding: 9px 18px;
-  font-family: var(--montserrat);
-  font-weight: 400;
-  font-size: 16px;
-  border-radius: 57px;
-  border: none;
-  color: $white;
-  background-color: $accentColor;
-  outline: none;
-  cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    width: 136px;
+    height: 38px;
+    padding: 9px 18px;
+    font-family: var(--montserrat);
+    font-weight: 400;
+    font-size: 16px;
+    border-radius: 57px;
+    border: none;
+    color: $white;
+    background-color: $buttonColor;
+    outline: none;
+    cursor: pointer;
 
-  &:hover,
-  &:focus {
-    background-color: $hoverBtnColor;
+    &:hover,
+    &:focus {
+        background-color: $hoverBtnColor;
 
-    & .arrow {
-      transform: rotate(90deg);
+        & .arrow {
+            transform: rotate(90deg);
+        }
     }
-  }
 
-  @media screen and (min-width: $tablet) {
-    padding: 14px 24px;
-    width: 192px;
-    height: 52px;
-  }
-  @media screen and (min-width: $laptop) {
-    width: 222px;
-    height: 57px;
-  }
+    @media screen and (min-width: $tablet) {
+        padding: 14px 24px;
+        width: 192px;
+        height: 52px;
+    }
+    @media screen and (min-width: $laptop) {
+        width: 222px;
+        height: 57px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    padding: 14px 28px;
-    width: 312px;
-    height: 72px;
-    font-size: 24px;
-  }
+    @media screen and (min-width: $desktop) {
+        padding: 14px 28px;
+        width: 312px;
+        height: 72px;
+        font-size: 24px;
+    }
 }
 
 .arrow {
-  display: none;
-  @media screen and (min-width: $tablet) {
-    display: block;
-    fill: $white;
-    width: 16px;
-    height: 15px;
-  }
-  @media screen and (min-width: $laptop) {
-    width: 24px;
-    height: 22px;
-  }
+    display: none;
+    @media screen and (min-width: $tablet) {
+        display: block;
+        fill: $white;
+        width: 16px;
+        height: 15px;
+    }
+    @media screen and (min-width: $laptop) {
+        width: 24px;
+        height: 22px;
+    }
 }
